--- a/src/components/AdminPanel/navbar/Navbar.scss
+++ b/src/components/AdminPanel/navbar/Navbar.scss
@@ -5,12 +5,78 @@
     align-items: center;
     font-size: 14px;
     color: #555;
+    padding: 0 20px; // Añadir padding horizontal
 
-    .wrapper{
+    .wrapper {
         display: flex;
-
-        .items{
+        padding: 20px;
+        align-items: center;
+        justify-content: space-between;
+        width: 100%; 
+        
+        .search {
+            display: flex;
+            align-items: center;
+            border: 0.5px solid lightgray;
+            border-radius: 3px;
+            padding: 3px;
             
+            input {
+                border: none;
+                outline: none;
+                background: transparent;
+                
+                &::placeholder {
+                    font-size: 12px;
+                }
+            }
+        }
+        
+        .items {
+            display: flex;
+            align-items: center;
+            
+            .item {
+                display: flex;
+                align-items: center;
+                margin-right: 20px;
+                position: relative;
+                background-color: yellow;
+                cursor: pointer;
+                
+                &:last-child {
+                    margin-right: 0;
+                }
+                .icon {
+                    font-size: 20px;
+                    color: #555;
+                }
+
+                .avatar {
+                    width: 40px;
+                    height: 40px;
+                    border-radius: 50%;
+                }
+
+                .counter {
+                    width: 15px;
+                    height: 15px;
+                    background-color: red;
+                    border-radius: 50%;
+                    color: white;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    font-size: 10px;
+                    font-weight: bold;
+                    position: absolute;
+                    top: -5px;
+                    right: -5px;
+
+
+                    
+                }
+            }
         }
     }
 }
